Bug 78737 - Tab Stop set from ruler is at wrong position if there is Numbering and Bullets
Summary: Tab Stop set from ruler is at wrong position if there is Numbering and Bullets
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: All All
: medium minor
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.4.0 target:4.3.0.0.beta2...
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2014-05-15 12:06 UTC by Emanuele
Modified: 2015-12-17 08:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (94.32 KB, image/png)
2014-05-15 12:06 UTC, Emanuele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emanuele 2014-05-15 12:06:42 UTC
Created attachment 99082 [details]
Screenshot

Strange behaviour (bug?) when setting tab position on the ruler within a Numbering environment.

The reproduce the problem:

1) Click on Numbering (F12)
2) Type some text
3) Click on the ruler to set a new tab position
4) Press "Tab" key
5) Type some text

The tab position should look fine on the ruler, but the indented text will be shifted on the right (increased of 0.5 inches when using default Numbering indent value).
Operating System: All
Version: 4.2.3.3 release
Comment 1 Joel Madero 2014-05-16 16:59:18 UTC
Indeed a bug:
Confirmed on:
Ubuntu x64
4.3 master (build from two nights ago)

Prioritizing:
New (confirmed)
Minor (can substantially slow down professional work in some circumstances but won't prevent professional quality work completely)
Medium: Regression so bumping up from "low"

Also confirmed:
Regression

Bibisect:
 a1e7a22ceea6e43a9bc921678aaa53b0e46444de is the first bad commit
commit a1e7a22ceea6e43a9bc921678aaa53b0e46444de
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 17:35:45 2012 +0000

    source-hash-a20f9a410fdd3f776f870434bc39219d5fc64b40
    
    commit a20f9a410fdd3f776f870434bc39219d5fc64b40
    Author:     Noel Grandin <noel@peralex.com>
    AuthorDate: Wed Oct 3 13:30:43 2012 +0200
    Commit:     Stephan Bergmann <sbergman@redhat.com>
    CommitDate: Thu Oct 4 16:29:53 2012 +0200
    
        fdo#46808, Adapt xml::sax::XParser UNO service to new style
    
        The xml.sax.Parser service already existed, it just did not have
        a new-style service to create it.
    
        Change-Id: I6f145a7504ff9e149c802f723991954a2801cbc9

:100644 100644 0a2166bae9c838b1ac4f1361e629291f0e0aba13 b7cb5c5fc3c41b6ca5d400137367b19efc4fe28f M	ccache.log
:100644 100644 b3c11b723c8354b9dc7295f75b1ae1b424d6d096 5680cdb04b35639f2f1400c66ccab14ba64f2eb6 M	commitmsg
:100644 100644 a213961f2cad89295bf28a98cb969c734b2b4f24 26cc768956bad2d9c4be9b25f6c827aa40310762 M	dev-install.log
:100644 100644 a9d40710f309e3236c9c349c956ffe5cd22784d0 dc6d136e4e7c26263bb36a56b13593cd3e167296 M	make.log
:040000 040000 2907b4766ceb9ee3ef7c9f33674a843fe97cac8d af5af3dece0683344483358662d76fa272363a73 M	opt

# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [8092559c5013969ebda017d79200463b9b975038] source-hash-fd84daf696a368c2c7561b5253b32a63ecdeca4a
git bisect bad 8092559c5013969ebda017d79200463b9b975038
# good: [2bdbcaf93e4616633a733de7eb88ba19571929ac] source-hash-cf04745f7a027594fd64a493c276a8280dbccfe1
git bisect good 2bdbcaf93e4616633a733de7eb88ba19571929ac
# good: [f823dd19086ed09fb8e2072050e963cf1bfcd5fe] source-hash-b679a2a02180c017bd8b596fb2e4f283bad93b75
git bisect good f823dd19086ed09fb8e2072050e963cf1bfcd5fe
# bad: [8cf46b05e525ac3602433613f227f0dcacc44035] source-hash-1692cf6854ff7adbb2bd47f2f7ec2b3de51864f3
git bisect bad 8cf46b05e525ac3602433613f227f0dcacc44035
# good: [68c41f25bed42a528d079d67a9b54f5b36ceb10c] source-hash-69222d71221d0ec81a3dbf01789456bcf2dde0da
git bisect good 68c41f25bed42a528d079d67a9b54f5b36ceb10c
# bad: [315e56ea4a3e606b1cb6f9f8e0ac283ee81aa834] source-hash-7c4d3ea6ba4d42b4dda5148a00c8c411b5d7703d
git bisect bad 315e56ea4a3e606b1cb6f9f8e0ac283ee81aa834
# good: [cf0592bba5aece50429f00c298d76f03afdf1a1c] source-hash-9ed34f8137e1ec4f58151eba74507102192cb8fd
git bisect good cf0592bba5aece50429f00c298d76f03afdf1a1c
# bad: [5ab292fa34582f4dbcd048db526062e5090f14cb] source-hash-d18455e24644a90cbf9f146ea8b4eed74180592b
git bisect bad 5ab292fa34582f4dbcd048db526062e5090f14cb
# bad: [a1e7a22ceea6e43a9bc921678aaa53b0e46444de] source-hash-a20f9a410fdd3f776f870434bc39219d5fc64b40
git bisect bad a1e7a22ceea6e43a9bc921678aaa53b0e46444de
# first bad commit: [a1e7a22ceea6e43a9bc921678aaa53b0e46444de] source-hash-a20f9a410fdd3f776f870434bc39219d5fc64b40
Comment 2 Joel Madero 2014-05-16 17:00:54 UTC
Also very likely that this is not a regression in 4.2.3 - probably from 4.2.0. If you can confirm this please update the version to the oldest version that you see the problem. Thanks!

http://downloadarchive.documentfoundation.org/libreoffice/old/
Comment 3 Emanuele 2014-05-17 16:32:05 UTC
You are right, it's a regression: version 4.0.6 is fine, while the problem is present in version 4.1.0.0-beta1
Comment 4 Michael Stahl 2014-05-27 22:05:00 UTC
the bibisect in comment #1 is not plausible - the range is older than 4.0 branchoff but the bug is not in 4.0.0.3.

what i'm getting is: 0c45b5548537cffddc3fbdd6b1c2b9a8a1bdbc4a..f160e4935c474a5293b3d3c11b3d538efb4767a0

regression from commit d02f75a8c36705924ddd6a5921fe3012fafce812
'Resolves: #i121420# merge sidebar feature'
Comment 5 Michael Stahl 2014-05-28 21:23:49 UTC
in SvxRuler::Click the GetLeftIndent() returns 48 in 4.0 but 0 in master

SvxRuler::UpdatePara(SvxLRSpaceitem *) is called only in 4.0

oh my how does this SfxBinding stuff work...

in 4.0 aSlotServ of the item is aSwViewSlots_Impl
in 4.1 aSoltServ of the item is aSwTextShellSlots_Impl

ah, got it... fixed on master.
Comment 6 Commit Notification 2014-05-28 21:24:55 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7c8b2f10310f0f64b111afb3012e82e9c4a690ac

fdo#78737: sw: fix setting tab stops via ruler



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-05-28 21:27:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=caf0306b5907ce82502e58d02dcff94339d24840&h=libreoffice-4-3

fdo#78737: sw: fix setting tab stops via ruler


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-05-29 08:06:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f9d5d1a7dabb73b16b6528217a26924feb08c1b7&h=libreoffice-4-2

fdo#78737: sw: fix setting tab stops via ruler


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-06-07 14:40:59 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5607ee9ab4a55521c5a72a015c3c5f371fccfc3&h=libreoffice-4-2-5

fdo#78737: sw: fix setting tab stops via ruler


It will be available already in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Robinson Tryon (qubit) 2015-12-17 08:06:05 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]