fdo#78737: sw: fix setting tab stops via ruler

The SvxRuler binds the SID_ATTR_PARA_LRSPACE, and its indents and the
positions of tab stops depend on the values it gets from there; in LO
4.0 the value came from the SwView::StateTabWin() but now it comes from
SwTextShell::GetAttrState(), and the difference is that the former does
a special request to get the NumRule indents as LR-space.

(regression from d02f75a8c36705924ddd6a5921fe3012fafce812)

Change-Id: I548ce188655555f2473cb3973ce7aeb927d1a404
(cherry picked from commit 7c8b2f10310f0f64b111afb3012e82e9c4a690ac)